Изменен mysite_nginx

--- a/Businessas/conf/mysite_nginx.conf
+++ b/Businessas/conf/mysite_nginx.conf
@@ -1,4 +1,7 @@
+# mysite_nginx.conf
+
 # the upstream component nginx needs to connect to
+# Если будете настраивать несколько django сайтов - измените название upstream
 upstream django {
     # server unix:///path/to/your/mysite/mysite.sock; # for a file socket
     server 194.87.93.234:80; # for a web port socket (we'll use this first)
@@ -6,27 +9,23 @@ upstream django {
 
 # configuration of the server
 server {
-    # the port your site will be served on
-    listen      80;
-    # the domain name it will serve for
-    server_name http://businessas.ru/; # substitute your machine's IP address or FQDN
+    listen      80;           # порт на котором будет доступен ваш сайт
+    server_name .example.com; # доменное имя сайта
     charset     utf-8;
 
-    # max upload size
-    client_max_body_size 75M;   # adjust to taste
+    client_max_body_size 75M; # max upload size
 
     # Django media
     location /media  {
-        alias /www/Businessas/Businessas/media;  # your Django project's media files - amend as required
+        alias /data/mysite/project/media;
     }
 
     location /static {
-        alias /www/Businessas/Businessas/static; # your Django project's static files - amend as required
+        alias /data/mysite/project/static;
     }
 
-    # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
         include     uwsgi_params;
         }
-}
+    }
