--- a/Businessas/conf/mysite_nginx.conf
+++ b/Businessas/conf/mysite_nginx.conf
@@ -26,6 +26,6 @@ server {
 
     location / {
         uwsgi_pass  django;
-        include     /uwsgi_params; # the uwsgi_params file you installed
-    }
+        include ./uwsgi_params;
+        }
     }
