--- a/Businessas/conf/mysite_nginx.conf
+++ b/Businessas/conf/mysite_nginx.conf
@@ -17,11 +17,11 @@ server {
 
     # Django media
     location /media  {
-        alias /data/mysite/project/media;
+        alias /www/Businessas/media;
     }
 
     location /static {
-        alias /data/mysite/project/static;
+        alias /www/Businessas/static;
     }
 
     location / {
