Добавлены пути для папки медиа и статик

--- a/Businessas/conf/mysite_nginx.conf
+++ b/Businessas/conf/mysite_nginx.conf
@@ -17,11 +17,11 @@ server {
 
     # Django media
     location /media  {
-        alias /www/Businessas/media;
+        alias /root/website/dev/Website_bs/Businessas/media;
     }
 
     location /static {
-        alias /www/Businessas/static;
+        alias /root/website/dev/Website_bs/Businessas/static;
     }
 
     location / {
