Изменен файл mysite_nginx.conf

--- a/Businessas/mysite_nginx.conf
+++ b/Businessas/mysite_nginx.conf
@@ -4,7 +4,7 @@
 # Если будете настраивать несколько django сайтов - измените название upstream
 upstream django {
     # server unix:///path/to/your/mysite/mysite.sock; # for a file socket
-    server 194.87.93.234:80; # for a web port socket (we'll use this first)
+    server 127.0.0.1:8000; # взаимодействие с uwsgi через веб-порт
 }
 
 # configuration of the server
@@ -17,11 +17,11 @@ server {
 
     # Django media
     location /media  {
-        alias /root/website/dev/Website_bs/Businessas/media;
+        alias ~/website/dev/Website_bs/Businessas/media;
     }
 
     location /static {
-        alias /root/website/dev/Website_bs/Businessas/static;
+        alias ~/website/dev/Website_bs/Businessas/static;
     }
 
     location / {
