Изменен файл mysite_nginx.conf

--- a/Businessas/mysite_nginx.conf
+++ b/Businessas/mysite_nginx.conf
@@ -10,7 +10,7 @@ upstream django {
 # configuration of the server
 server {
     listen      80;           # порт на котором будет доступен ваш сайт
-    server_name http://businessas.ru/; # доменное имя сайта
+    server_name businessas.ru; # доменное имя сайта
     charset     utf-8;
 
     client_max_body_size 75M; # max upload size
