Изменен файл mysite_nginx.conf и mysite_uwsgi.ini

--- a/Businessas/mysite_nginx.conf
+++ b/Businessas/mysite_nginx.conf
@@ -3,8 +3,8 @@
 # the upstream component nginx needs to connect to
 # Если будете настраивать несколько django сайтов - измените название upstream
 upstream django {
-#     server unix:///website/dev/Website_bs/Businessas/mysite.sock; # for a file socket
-    server 127.0.0.1:8000; # взаимодействие с uwsgi через веб-порт
+    server unix:///website/dev/Website_bs/Businessas/mysite.sock; # for a file socket
+#     server 127.0.0.1:8000; # взаимодействие с uwsgi через веб-порт
 }
 
 # configuration of the server
