--- a/Businessas/mysite_uwsgi.ini
+++ b/Businessas/mysite_uwsgi.ini
@@ -1,12 +1,12 @@
 # mysite_uwsgi.ini file
 [uwsgi]
-;socket = ~/website/dev/Website_bs/Businessas/mysite.sock
-socket=127.0.0.1:8000
+socket = ~/website/dev/Website_bs/Businessas/mysite.sock
+;socket=127.0.0.1:8000
 chdir=~/website/dev/Website_bs/Businessas
 module=Businessas.uwsgi:application
 master=true
 processes=2
 logto=/var/log/uwsgi/uwsgi.log
-;chmod-socket=666
+chmod-socket=666
 
 ;die-on-term=true
