Изменен файл mysite_nginx.conf

--- a/Businessas/mysite_uwsgi.ini
+++ b/Businessas/mysite_uwsgi.ini
@@ -1,6 +1,6 @@
 # mysite_uwsgi.ini file
 [uwsgi]
-socket = ~/website/dev/Website_bs/Businessas/mysite.sock
+socket = /root/website/dev/Website_bs/Businessas/mysite.sock
 ;socket=127.0.0.1:8000
 chdir=~/website/dev/Website_bs/Businessas
 module=Businessas.uwsgi:application
